Get uberjar working again.